--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "cross-env NODE_ENV=test jest",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open",
+    "lint": "eslint --ext .js src/",
     "build": "webpack"
   },
   "keywords": [],
@@ -16,6 +17,9 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "clean-webpack-plugin": "^1.0.0",
     "cross-env": "^5.2.0",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
