--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "eslint --ext .js src/",
     "build": "webpack"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-eslint": "^10.0.1",
     "clean-webpack-plugin": "^1.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.10.0",
@@ -22,12 +26,12 @@
     "eslint-plugin-import": "^2.14.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "pre-commit": "^1.2.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "webpack": "^4.27.1"
   }
 }
